added pretty string display added Breeding Capability